Created drinks with decorator design pattern

--- a/Launcher/Launcher.csproj
+++ b/Launcher/Launcher.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ClassLib\ClassLib.csproj" />
+  </ItemGroup>
+
 </Project>
